--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "http://gesse666.github.io/Alpha-test",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -13,7 +14,6 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2",
-    "homepage" : "http://<gesse666>.github.io/<Alpha-test>"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +39,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies":{
+"gh-pages":"^2.0.1"
 }
